--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,4 +1,4 @@
-FROM arm32v7/debian:buster-slim
+FROM balenalib/raspberrypi3-debian:stretch-20190612
 
 ARG MUMBLE_SERVER_VERSION=1.3.0
 ENV MUMBLE_SERVER_VERSION=$MUMBLE_SERVER_VERSION
