--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,8 @@ services:
 #     image: ernestgwilsonii/docker-raspberry-pi-mumble-server:1.3.4
     hostname: mumble-server
     ports:
-      # Mumble Control TCP 64738
-      - mode: host
-        target: "64738"
-        published: "64738"
-        protocol: tcp
-      # Mumble Audio UDP 64738
-      - mode: host
-        target: "64738"
-        published: "64738"
-        protocol: udp
+      - "64738:64738/udp"
+      - "64738:64738/tcp"
     networks:
       - mumble-net1
     volumes:
